2014-03-12 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Feature: Added a parameter to ServiceAPI::CallAPI can bypass caching completly.

2014-02-20 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Bug fix: On second pass, ServiceAPI::CallAPI, convArray did not work well. Rewriten for individual calls.

2014-02-19 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Feature: Object level caching in API Service.
	* Feature: Enabled XCLASS for object classes.
	* Feature: Alternate getEntryPointListByNameAndCityAndType in API Service.

2014-01-21 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Feature: Constant editor line selector control.
	* Feature: Object generation cached in APIService::_getLineList.

2013-08-23 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Fix: Missing implementation of INodeList::Sort in HangList.

2013-07-16 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Feature: New sort method in INodeList implemented in child classes. Use a callback to sort using usort.

2013-07-13 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Feature: Instantiated nodes are put in a repository by externalCode or idx.
	* Feature: Recall node instance from repository in node getter when the node have a related idx or externalCode attribute.

2013-06-27 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Change: All requested are cached. Previously not cached items are removed upon cache update.

2013-06-24 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Added APIService::getCityList.
	* Added APIService::getLineScheduleByStopArea.

2013-06-21 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Added cache scheduler task and required dependencies.
	* Added APIService::getEndOfCourseByStopIdx.

2013-06-20 Pierrick Caillon <pierrick.caillon@plan-net.fr>
	* Added APIService::getDepartureBoardByStopAreaForLine.
	* Added APIService::getStopAreasByLineCode.
	* Added Vehicule and Equipment nodes.

2013-06-19 Pierrick Caillon <pierrick.caillon@plan-net.fr>